--- a/css/main.css
+++ b/css/main.css
@@ -29,13 +29,18 @@ body.before-load{overflow:hidden;}
 .description{font-size:1.2rem;color:#888;padding:0 1rem;max-width:1000px;margin:0 auto;}
 .description strong{font-size:3rem;color:rgb(29, 29, 31);float:left;margin-right:0.2em;}
 .desc-message{font-weight:bold;width:50%;opacity: 0;}
-/* .pin{width:1px;height:100px;background: rgb(29,29,31);} */
-/* #scroll-section-2 .b{top:30%;left:55%}
-#scroll-section-2 .c{top:20%;left:55%} */
 .mid-message{font-size:2rem;color:#888;padding:0 1rem;width:1000px;margin:0 auto}
 .mid-message strong{color:rgb(29, 29, 31);}
 .canvas-caption{color:#888;padding:0 1rem;font-size:1.2rem;max-width:1000px;margin:-24rem auto 0}
-.footer{display:flex;justify-content: center;align-items: center;height:7rem;background: #222;color:white}
+.footer{display:flex;justify-content: center;height: 200px;;background: #222;color:white;position: relative;margin:auto}
+.footer-box{max-width:1000px;height:150px;display:flex;flex-direction:column}
+.footer ul li a{color:white}
+.footer-menu{display:flex;justify-content: space-between;width:100%;box-sizing: border-box;padding:1rem 1rem 0 1rem;font-size:1rem}
+.footer-column{display:flex;flex-direction:column;justify-content: space-evenly;width:100%;}
+.footer-term{display:flex;width:80%;height:20px;box-sizing: border-box;justify-content: space-between;margin:auto;font-size:0.9rem}
+.social-link{display:flex;width:80%;box-sizing: border-box;padding:0 1rem;margin:20px auto 0;justify-content: space-between;text-align:center;align-items: center;}
+.footer-logo{position: absolute;bottom: 0;width:100%;box-sizing: border-box;text-align:center;padding-bottom:1rem}
+.social-icon{width:30%;height:30%;fill:white}
 .sticky-elem{position:fixed;left:0;width:100%;display:none}
 
 #show-scene-0 #scroll-section-0 .sticky-elem,
@@ -50,9 +55,7 @@ body.before-load{overflow:hidden;}
 #scroll-section-3{display:flex;flex-direction: column;align-items: center;position: relative;}
 
 .loading{position: fixed;top: 0;right: 0;bottom: 0;left: 0;z-index:100;background: white;transition:0.5s;opacity:0;display:flex;align-items: center;justify-content: center;}
-.before-load .loading{
-    opacity:1;
-}
+.before-load .loading{opacity:1;}
 @keyframes loading-spin{
     100%{transform: rotate(360deg);}
 }
@@ -66,53 +69,17 @@ body.before-load{overflow:hidden;}
 
 /* getTotalLength()로 stroke의 길이를 얻어올 수 있음 */
 
-.normal-content{margin-bottom: 10rem;}
+/* #scroll-section-3 .normal-content{color:rgb(29, 29, 31);max-width:1000px;font-size: 2rem;}
+.normal-content{padding:20vh 0} */
 
-.scroll-section {
-	position: relative;
-	padding-top: 50vh;
-	color: #fff;
-}
-#scroll-section-2 h2 {
-	position: relative;
-	top: 50vh;
-	z-index: 5;
-	font-size: 5.5rem;
-	text-align: center;
-}
-.stroke-message {
-	top: 40vh;
-	font-size: 4.5rem;
-	opacity: 0;
-}
-.stroke-message.b {
-	font-size: 4.5rem;
-}
-.stroke-message p {
-	font-weight: bold;
-	text-align: center;
-	line-height: 1.2;
-}
-.stroke-message small {
-	display: block;
-	margin-bottom: 0.5em;
-	font-size: 1.2rem;
-}
-.pencil-logo {
-	left: 50%;
-	top: 50%;
-	width: 1000vw;
-	transform: translate(-10%, -50%);
-}
-.pencil {
-	left: auto;
-	top: auto;
-	right: -10%;
-	bottom: -80%;
-	width: 20vw;
-	animation: ball-spin 3s infinite
-	/* transform: rotate(-180deg); */
-}
+.scroll-section {position: relative;padding-top: 50vh;color: #fff;}
+#scroll-section-2 h2 {position: relative;top: 50vh;z-index: 5;font-size: 5.5rem;text-align: center;}
+.stroke-message {top: 40vh;font-size: 4.5rem;opacity: 0;}
+.stroke-message.b {font-size: 4.5rem;}
+.stroke-message p {font-weight: bold;text-align: center;line-height: 1.2;}
+.stroke-message small {display: block;margin-bottom: 0.5em;font-size: 1.2rem;}
+.pencil-logo {left: 50%;top: 50%;width: 1000vw;transform: translate(-10%, -50%);}
+.pencil {left: auto;top: auto;right: -10%;bottom: -80%;width: 20vw;animation: ball-spin 3s infinite/* transform: rotate(-180deg); */}
 @keyframes ball-spin{
 	from { 
 		transform: rotate(0deg); 
@@ -120,21 +87,8 @@ body.before-load{overflow:hidden;}
 		transform: rotate(360deg); 
 	}
 }
-.ribbon-path {
-	left: 50%;
-	top: 50%;
-	min-width: 850px;
-	transform: translate(-50%, -50%);
-}
-.ribbon-path path {
-	fill: none;
-	stroke: #FF0044;
-	stroke-width: 62;
-	stroke-linecap: round;
-	stroke-linejoin: round;
-	stroke-dasharray: 1401, 1401;
-	stroke-dashoffset: 1401;
-}
+.ribbon-path {left: 50%;top: 50%;min-width: 850px;transform: translate(-50%, -50%);}
+.ribbon-path path {fill: none;stroke: #FF0044;stroke-width: 62;stroke-linecap: round;stroke-linejoin: round;stroke-dasharray: 1401, 1401;stroke-dashoffset: 1401;}
 
 @media(min-width:1024px){
     #scroll-section-0 h2{font-size:9vw;}
@@ -144,8 +98,9 @@ body.before-load{overflow:hidden;}
     #scroll-section-2 .main-message{font-size:6vw;}
     .main-message small{font-size:1.5vw;}
     .desc-message{width:20%}
-    /* #scroll-section-2 .b{top:20%;left:53%}
-    #scroll-section-2 .c{left:55%} */
     .mid-message{font-size:4vw;padding:0}
     .canvas-caption{font-size:2rem;padding:0;margin-top:-8rem;}
+	.footer-menu{font-size:1.5rem}
+	.footer-term{font-size:1.2rem;margin-top:20px;}
+	.footer{height:250px}
 }
