--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,18 @@ body.before-load{overflow:hidden;}
 .global-nav-links a{color:white}
 .local-nav-links .product-name{margin-right:auto;font-size:1.2rem}
 .local-nav-links a {font-size:0.8rem;color:white}
-.local-nav{height:52px;border-bottom:1px solid #ddd;padding: 0 1rem;position: absolute;top: 45px;left: 0;width:100%;z-index: 11}
+.local-nav{height:52px;border-bottom:1px solid #ddd;padding: 0 1rem;position: fixed;top: 0;left: 0;width:100%;z-index: 11}
 .local-nav-sticky .local-nav{position:fixed;top:0;background:rgba(255,255,255,0.1);backdrop-filter:saturate(180%) blur(15px);-webkit-backdrop-filter:saturate(180%) blur(15px);-moz-backdrop-filter:saturate(180%) blur(15px);-o-backdrop-filter:saturate(180%) blur(15px)}
+.local-nav-sticky .icon{width:30px;height:30px;fill:rgb(29, 29, 31)}
 .local-nav-sticky .local-nav a{color:rgb(29,29,31)}
 .local-nav-sticky .local-nav h1{color:rgb(29,29,31)}
 .local-nav-links a:not(.product-name){margin-left:2em;}
+
+.gnb{position: fixed;top:52px;width:100%;z-index:20;background: #fff;border-bottom:1px solid #ddd;padding:0 1rem;display:none}
+.gnb ul li{line-height:2em;font-size:1.2rem;border-bottom:1px solid #ededed}
+.gnb ul li a:hover{font-size:1.4rem}
+.close{display:none;}
+
 .scroll-section{padding-top: 50vh;}
 .product-name h2{color:white}
 #scroll-section-0 h2{font-size:4rem;text-align:center;position: relative;z-index:5;top:-10vh;color:white}
@@ -32,7 +39,8 @@ body.before-load{overflow:hidden;}
 .mid-message{font-size:2rem;color:#888;padding:0 1rem;width:1000px;margin:0 auto}
 .mid-message strong{color:rgb(29, 29, 31);}
 .canvas-caption{color:#888;padding:0 1rem;font-size:1.2rem;max-width:1000px;margin:-24rem auto 0}
-.footer{display:flex;justify-content: center;height: 200px;;background: #222;color:white;position: relative;margin:auto}
+.footer{display:flex;justify-content: center;height: 100px;;background: white;color:white;position: fixed;bottom:0;left:0;margin:auto;width:100%;z-index:6;border-top:1px solid #ddd}
+.footer .box{display:flex;justify-content: space-between;padding:0 1rem;box-sizing: border-box;align-items: center;height:100%;width:100%;max-width: 1000px;margin:auto}
 .footer-box{max-width:1000px;height:150px;display:flex;flex-direction:column}
 .footer ul li a{color:white}
 .footer-menu{display:flex;justify-content: space-between;width:100%;box-sizing: border-box;padding:1rem 1rem 0 1rem;font-size:1rem}
@@ -42,6 +50,9 @@ body.before-load{overflow:hidden;}
 .footer-logo{position: absolute;bottom: 0;width:100%;box-sizing: border-box;text-align:center;padding-bottom:1rem}
 .social-icon{width:30%;height:30%;fill:white}
 .sticky-elem{position:fixed;left:0;width:100%;display:none}
+.footer .icon{width:30px;height:30px;fill:rgb(29, 29, 31)}
+.icon{width:30px;height:30px;fill:white}
+
 
 #show-scene-0 #scroll-section-0 .sticky-elem,
 #show-scene-1 #scroll-section-1 .sticky-elem,
