--- a/css/athlete_info.css
+++ b/css/athlete_info.css
@@ -36,6 +36,7 @@ main{padding-bottom:100px;max-width:1000px;margin:52px auto 0}
 
 .footer{position:fixed;bottom:0;left:0;width:100%;height:100px;background: white;border-top:1px solid #ddd}
 .footer .box{display:flex;justify-content: space-between;padding:0 1rem;box-sizing: border-box;align-items: center;height:100%;width:100%;max-width: 1000px;margin:auto}
+.box a{display:flex;flex-direction:column;align-items: center;}
 .footer .box .icon{fill:rgb(29, 29, 31);width:30px;height:30px}
 
 html{font-size:14px;}
