--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ body.before-load{overflow:hidden;}
 .sticky-elem{position:fixed;left:0;width:100%;display:none}
 .footer .icon{width:30px;height:30px;fill:rgb(29, 29, 31)}
 .footer .box a{display:flex;flex-direction:column;align-items: center;}
-.icon{width:30px;height:30px;fill:white}
+.icon{width:30px;height:30px;fill:white;margin-bottom:0.5rem}
 
 
 #show-scene-0 #scroll-section-0 .sticky-elem,
