--- a/css/parent.css
+++ b/css/parent.css
@@ -12,7 +12,7 @@
 .close{display:none;}
 
 
-main{max-width:1000px;background: #f5e5cb;width:100%;height:2000px;box-sizing: border-box;margin:52px auto 0}
+main{max-width:1000px;background: #f7ece2;width:100%;height:2000px;box-sizing: border-box;margin:52px auto 0}
 .athlete-info{width: 100%;padding:2rem 1rem 1rem 1rem;box-sizing: border-box;background: #fc9200;height:300px;border-radius:0 0 20px 20px;margin-bottom:2rem;color:white;display:flex;flex-direction:column;justify-content: space-between;align-items: center;}
 .athlete-photo{width:120px;height: 120px;background-image: url(../images/victor.jpeg);background-size:100px;background-position:center;border-radius: 50%;}
 .info-list{display:flex;justify-content: space-between;width:70%}
@@ -54,7 +54,7 @@ main{max-width:1000px;background: #f5e5cb;width:100%;height:2000px;box-sizing: b
 .footer{position:fixed;bottom:0;left:0;width:100%;height:100px;background: white;border-top:1px solid #ddd}
 .footer .box{display:flex;justify-content: space-between;padding:0 1rem;box-sizing: border-box;align-items: center;height:100%;width:100%;max-width: 1000px;margin:auto}
 .footer .box a{display:flex;flex-direction:column;align-items: center;}
-.footer .box .icon{fill:rgb(29, 29, 31);width:30px;height:30px}
+.footer .box .icon{fill:rgb(29, 29, 31);width:30px;height:30px;margin-bottom:0.5rem}
 
 html{font-size:14px;}
 body{font-family:'noto sans kr',sans-serif;color:rgb(29, 29, 31);letter-spacing:-0.05em;background: white;}
