--- a/public/css/login.css
+++ b/public/css/login.css
@@ -25,6 +25,7 @@ input[type="text"]{width:100%;border:none;background:none;}
 .btn-box button:first-child{background: #c9c9c9;}
 .sub-box{display:flex;margin-bottom:1rem}
 .sign-up{margin-left:auto}
+#sub-btn{padding:1rem;background: #000;color:white;box-sizing: border-box;font-size:1.2rem;border-radius: 20px;box-sizing: border-box;width:45%;border:none}
 
 .footer{position:fixed;bottom:0;left:0;width:100%;height:100px;background: white;border-top:1px solid #ddd}
 .footer .box{display:flex;justify-content: space-between;padding:0 1rem;box-sizing: border-box;align-items: center;height:100%;width:100%;max-width: 1000px;margin:auto}
