--- a/public/css/main.css
+++ b/public/css/main.css
@@ -103,7 +103,7 @@ body.before-load{overflow:hidden;}
 .ribbon-path {left: 50%;top: 50%;min-width: 850px;transform: translate(-50%, -50%);}
 .ribbon-path path {fill: none;stroke: #FF0044;stroke-width: 62;stroke-linecap: round;stroke-linejoin: round;stroke-dasharray: 1401, 1401;stroke-dashoffset: 1401;}
 
-@media(min-width:1024px){
+/* @media(min-width:1024px){
     #scroll-section-0 h2{font-size:9vw;}
     .main-message{font-size: 4vw;}
     .description{font-size: 2rem;padding:0}
@@ -116,4 +116,4 @@ body.before-load{overflow:hidden;}
 	.footer-menu{font-size:1.5rem}
 	.footer-term{font-size:1.2rem;margin-top:20px;}
 	.footer{height:250px}
-}
+} */
